objects/TM_Line__c/fields/T_M_Line_Profit__c.field-meta.xml
<CustomField>
    <fullName>T_M_Line_Profit__c</fullName>
    <formula>Line_Amount__c - Line_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T&amp;M Line Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>