objects/TM_Line__c/fields/T_M_Line_Profit_Prct__c.field-meta.xml
<CustomField>
    <fullName>T_M_Line_Profit_Prct__c</fullName>
    <formula>If ( Line_Amount__c  &lt;&gt; 0,  T_M_Line_Profit__c  /  Line_Amount__c  , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T&amp;M Line Profit %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>