objects/TM_Line__c/fields/TempCheck2__c.field-meta.xml
<CustomField>
    <fullName>TempCheck2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TempCheck2</label>
    <type>Checkbox</type>
</CustomField>