objects/TM_Line__c/fields/TempCheck__c.field-meta.xml
<CustomField>
    <fullName>TempCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TempCheck</label>
    <type>Checkbox</type>
</CustomField>