objects/TM_Line__c/fields/TempContractId__c.field-meta.xml
<CustomField>
    <fullName>TempContractId__c</fullName>
    <formula>TM__r.Contract__c</formula>
    <label>TempContractId</label>
    <type>Text</type>
</CustomField>