objects/TM_Line__c/fields/TempIsSameContract__c.field-meta.xml
<CustomField>
    <fullName>TempIsSameContract__c</fullName>
    <formula>TempContractId__c == Contract_Line__r.Contract__c</formula>
    <label>TempIsSameContract</label>
    <type>Checkbox</type>
</CustomField>