objects/TM_Line__c/fields/TempIsSameSO__c.field-meta.xml
<CustomField>
    <fullName>TempIsSameSO__c</fullName>
    <formula>TempSalesOrderId__c == Sales_Line__r.Sales_Order__c</formula>
    <label>TempIsSameSO</label>
    <type>Checkbox</type>
</CustomField>