objects/TM_Line__c/fields/TempIsSameSQ__c.field-meta.xml
<CustomField>
    <fullName>TempIsSameSQ__c</fullName>
    <formula>Quote_Line__r.Sales_Order__c == TempQuoteOrderId__c</formula>
    <label>TempIsSameSQ</label>
    <type>Checkbox</type>
</CustomField>