objects/TM_Line__c/fields/TempParentChildInit__c.field-meta.xml
<CustomField>
    <fullName>TempParentChildInit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TempParentChildInit</label>
    <type>Checkbox</type>
</CustomField>