objects/TM_Line__c/fields/TempQuoteOrderId__c.field-meta.xml
<CustomField>
    <fullName>TempQuoteOrderId__c</fullName>
    <formula>TM__r.From_Sales_Quote__c</formula>
    <label>TempQuoteOrderId</label>
    <type>Text</type>
</CustomField>