objects/TM_Line__c/fields/TempSalesOrderId__c.field-meta.xml
<CustomField>
    <fullName>TempSalesOrderId__c</fullName>
    <formula>TM__r.Sales_Order__c</formula>
    <label>TempSalesOrderId</label>
    <type>Text</type>
</CustomField>