objects/TM_Line__c/fields/Text_Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>Text_Line_Amount__c</fullName>
    <formula>TEXT(Line_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Text Line Amount</label>
    <type>Text</type>
</CustomField>