objects/TM_Line__c/fields/Text_Line_Amount_Check__c.field-meta.xml
<CustomField>
    <fullName>Text_Line_Amount_Check__c</fullName>
    <formula>TEXT(Line_Amount_Check__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Text Line Amount Check</label>
    <type>Text</type>
</CustomField>