objects/TM_Line__c/fields/time__c.field-meta.xml
<CustomField>
    <fullName>time__c</fullName>
    <formula>TIMEVALUE( Lunch_Start_Time__c )  &gt;=  Job_End_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lunch Time Exceeds Job End Time</label>
    <type>Checkbox</type>
</CustomField>