objects/TM_Line__c/fields/TM__c.field-meta.xml
<CustomField>
    <fullName>TM__c</fullName>
    <label>T&amp;M</label>
    <referenceTo>TM__c</referenceTo>
    <relationshipLabel>T&amp;M Lines</relationshipLabel>
    <relationshipName>TM_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>