objects/TM_Line__c/fields/TM_Job_Task__c.field-meta.xml
<CustomField>
    <fullName>TM_Job_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>T&amp;M Job Task</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.TM__c</field>
            <operation>equals</operation>
            <valueField>TM_Job_Task__c.TM__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>TM_Job_Task__c</referenceTo>
    <relationshipLabel>T&amp;M Lines</relationshipLabel>
    <relationshipName>T_M_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>