objects/TM_Line__c/fields/TM_line_sent_to_EQAI__c.field-meta.xml
<CustomField>
    <fullName>TM_line_sent_to_EQAI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US139238</description>
    <label>TM line sent to EQAI</label>
    <type>Checkbox</type>
</CustomField>