objects/TM_Line__c/fields/Tm_Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Tm_Service_Center__c</fullName>
    <formula>TM__r.Service_Center__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tm Service Center</label>
    <type>Text</type>
</CustomField>