objects/TM_Line__c/fields/To_Invoice__c.field-meta.xml
<CustomField>
    <fullName>To_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To Invoice</label>
    <type>Checkbox</type>
</CustomField>