objects/TM_Line__c/fields/Total_Site_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Site_Hours__c</fullName>
    <label>Total Site Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>