objects/TM_Line__c/fields/Travel_Hours__c.field-meta.xml
<CustomField>
    <fullName>Travel_Hours__c</fullName>
    <label>Travel Hours</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>