objects/TM_Line__c/fields/Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>Travel_Time__c</fullName>
    <formula>Total_Job_Hours__c  -  Total_Site_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>