objects/TM_Line__c/fields/Unit_Cost_Check__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost_Check__c</fullName>
    <description>For Unit Cost Checking</description>
    <formula>Check_Value__c =  Unit_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Cost Check</label>
    <type>Checkbox</type>
</CustomField>