objects/TM_Line__c/fields/Unit_of_Measure3_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure3_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit of Measure3 Lookup</label>
    <referenceTo>Unit_of_Measure__c</referenceTo>
    <relationshipLabel>T&amp;M Lines (Unit of Measure3 Lookup)</relationshipLabel>
    <relationshipName>T_M_Lines3</relationshipName>
    <type>Lookup</type>
</CustomField>