objects/TM_Line__c/fields/Unit_Price_to_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_to_Invoice__c</fullName>
    <formula>ROUND(Line_Amount__c / Quantity__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price to Invoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>