objects/TM_Line__c/fields/Update_Note__c.field-meta.xml
<CustomField>
    <fullName>Update_Note__c</fullName>
    <label>Update Note</label>
    <length>30</length>
    <type>Text</type>
</CustomField>