objects/TM_Line__c/fields/WD__c.field-meta.xml
<CustomField>
    <fullName>WD__c</fullName>
    <formula>Resource__c = "a0rf4000001ZQVr"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WD</label>
    <type>Checkbox</type>
</CustomField>