objects/TM_Line__c/fields/Wizard_Question_Answered__c.field-meta.xml
<CustomField>
    <fullName>Wizard_Question_Answered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wizard Question Answered</label>
    <type>Checkbox</type>
</CustomField>