objects/TM_Line__c/fields/Wizard_Question_Parent_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Wizard_Question_Parent_Quantity__c</fullName>
    <label>Wizard Question Parent Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>