objects/TM_Line__c/fields/xHourly_UOM__c.field-meta.xml
<CustomField>
    <fullName>xHourly_UOM__c</fullName>
    <formula>Unit_of_Measure__r.Hours_UOM__c</formula>
    <label>xHourly UOM</label>
    <type>Checkbox</type>
</CustomField>