objects/TM_Line__c/fields/xOvertime_Rate__c.field-meta.xml
<CustomField>
    <fullName>xOvertime_Rate__c</fullName>
    <label>xOvertime Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>