objects/TM_Line__c/fields/xTM_Job_Task_ID__c.field-meta.xml
<CustomField>
    <fullName>xTM_Job_Task_ID__c</fullName>
    <label>xTM Job Task ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>